# chatgpt-tarot-divination

./: .dockerignore  .flake8  .gitignore  .vercelignore  AGENTS.md  Dockerfile  README.md  config.py  docker-compose.yaml  main-tauri.py  main.py  models.py  requirements.txt  vercel.json
.github/workflows/: codeql.yml  docker-image.yml  tauri.yaml
backend/: config.py  main.py
frontend/: .env.prod  .env.tauri  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js  vite.config.ts
frontend/public/: robots.txt  sitemap.xml
frontend/src/: App.tsx  App.vue  constants.js  index.css  main.js  main.tsx  vite-env.d.ts
frontend/src/components/: About.vue  DivinationCardHeader.tsx  ResultDrawer.tsx
frontend/src/config/: constants.js  constants.ts
frontend/src/hooks/: index.ts  useDivination.ts
frontend/src/layouts/: MainLayout.tsx
models/: db_models.py
router/: chatgpt_router.py  date_router.py  divination_router.py  file_logger.py  user.py  user_router.py
router/divination/: __init__.py  birthday.py  dream.py  fate.py  name.py  new_name.py  plum_flower.py
src/: app.py  chatgpt_router.py  config.py  divination_router.py  limiter.py  models.py  user.py  user_router.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/cache/: __init__.py  base.py  cache_client_factory.py  memory_client.py  redis_client.py  upstash_kv_client.py
src/divination/: __init__.py  base.py  birthday.py  dream.py  fate.py  name.py  new_name.py  plum_flower.py  tarot.py
(+25 files in other folders)
